welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:5: error: type mismatch;
 found   : Unit
 required: Boolean
  b=test()
        ^SnakeBuggle:22: error: type mismatch;
 found   : Unit
 required: Boolean
    b=test()
          ^SnakeBuggle:53: warning: enclosing method test has result type Unit: return value discarded
  return b
  ^